Mon Nov 22 10:05:01 2004  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Routing_Slip_Persistence_Manager.h:
        * orbsvcs/orbsvcs/Notify/Routing_Slip_Persistence_Manager.cpp:
          Function declaration: void foo (const size_t xyzzy);  the
          const is unnecessary (at best it's an implementation detail
          that doesn't need to be declared.)  TRU64 compiler was complaining
          (rightly) when the implementation omitted the const. Remove
          the const from the declaration.  Repeat as necessary.

Mon Nov 22 09:44:07 2004  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Admin.cpp:
        * orbsvcs/orbsvcs/Notify/EventChannel.cpp:
        * orbsvcs/orbsvcs/Notify/ProxyConsumer.cpp:
        * orbsvcs/orbsvcs/Notify/ProxySupplier.cpp:
          Derived class explicitly calling base class method confuses
          VC6 when namespace is involved.
          "Reword" the calls in hopes of unconfusing it.

Mon Nov 22 15:37:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/tutorials/Quoter/RT_Event_Service/client.cpp:
          Added include of Exception.h to get Corba exception streaming
          operator. Fixes compile problems with the Borland compiler.

Mon Nov 22 09:29:54 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_interface.cpp (copy_ctor_helper):

          When generating the call to the Messaging::ReplyHandler
          base class constructor for AMI reply handler classes,
          added the ACE_NESTED_CLASS macro wrapper to work around
          a VC6 compiler bug. Thanks to Johnny Willemsen
          <jwillemsen@rememdy.nl> for reporting the problem.

        * TAO_IDL/be/be_visitor_operation/operation_ss.cpp:

          Fixed indentation in code generation.

Mon Nov 22 09:05:41 2004  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Event.cpp:
          Bad initializer for reliability_ property.
